# rust-playground

./: .editorconfig  .gitignore  Cargo.toml  README.md
adder/src/: main.rs
guessing-game/: Cargo.toml
guessing-game/src/: main.rs
minigrep/src/: lib.rs  main.rs
qna-axum/: Cargo.toml  README.md  questions.json
qna-axum/migration/: Cargo.toml
qna-axum/migration/src/: lib.rs  m20250417_233200_create_questions_table.rs  m20250418_191300_create_answers_table.rs
qna-axum/src/: main.rs
qna-axum/src/entities/: answer.rs  mod.rs  prelude.rs  question.rs
qna-axum/src/handlers/: auth.rs  mod.rs  questions.rs
qna-axum/src/middlewares/: cors.rs  mod.rs  pagination.rs
qna-axum/src/models/: answer.rs  errors.rs  mod.rs  question.rs
qna-axum/src/services/: store.rs
qna-axum/tests/manual-http-requests/: api.http
qna-warp/: Cargo.toml  questions.json
qna-warp/src/: main.rs
web-server/: Cargo.toml  hello.html
web-server/src/: lib.rs  main.rs
