[package]
name = "qna-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
uuid = "1.17.0"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
http = "1.3.1"
sea-orm = {  version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "mock", "macros", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = "1.1.14"
dotenvy = "0.15.7"
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
